# brainfudgit

./: Cargo.toml  README.md
lib/: lib.rs
src/: main.rs
src/bytecode/: bytecode.rs  mod.rs
src/interpreter/: ast_interpreter.rs  bytecode_interpreter.rs  mir_interpreter.rs  mod.rs
src/jit/: mod.rs
src/jit/codegen/: mod.rs  x86_64.rs
src/jit/codegen/x86_64/: codegen.rs  instruction.rs  mod.rs  op.rs  operand.rs  operand_encoding.rs  ops.rs  registers.rs
src/lexer/: lexer.rs  mod.rs
src/optimizer/: comment_block.rs  constant_folding.rs  mod.rs
src/parser/: mod.rs  parser.rs
