[package]
name = "brainfudgit"
version = "0.1.0"
edition = "2021"
authors = ["Braedon Wooding <braedonww@gmail.com>"]

[lib]
proc-macro = true
path = "lib/lib.rs"

[[bin]]
name = "brainfudgit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
bitflags = "2.4.1"
arbitrary-int = "1.2"
bitbybit = "1.2"
num-traits = "0.2.17"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.69"
